cpulimit-toobig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-requested-toobig
  namespace: cpu-example
spec:
  containers:
  - name: cpu-demo-container
    image: vish/stress
    resources:
      limits:
        cpu: "200"
        memory: "100Mi"
      requests:
        cpu: "2"
        memory: "80Mi"
    args:
    - -cpus
    - "2"
