cpulimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-limit-1
  namespace: cpu-example
spec:
  containers:
  -name: cpu-demo-container
   image: python/latest
   resources:
     limits:
       cpu: "1"
     requests:
       cpu: "0.25"
   args:
   - -cpus
   - "2"
