memorylimit-request-toobig-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-limit-pod-3
  namespace: memory-example
spec:
  containers:
  - name: memory-limit-container
    image: polinux/stress
    resources:
      limits:
        memory: "90Gi"
      requests:
        memory: "80Gi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
