memorylimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-limit-pod
  namespace: memory-example
spec:
  containers:
  - name: memory-limit-container
    image: polinux/stress
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
