pod-volume-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: storage-ns
spec:
  containers:
  - name: redis-container
    image: redis
    resources:
      limits:
        memory: 200Mi
        cpu: "0.5"
      requests:
        memory: 150Mi
        cpu: "0.5"
    volumeMounts:
    - name: redis-storage
      mountPath: /data/redis
  volumes:
  - name: redis-storage
    emptyDir: {}
