qos-pod-example-Guaranteed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: qos-demo-pod-Guaranteed
  namespace: qos-example
spec:
  containers:
  - name: qos-demo-container001
    image: nginx
    resources:
      limits:
        memory: "700Mi"
        cpu: "700m"
      requests:
        memory: "700Mi"
        cpu: "0.7"
