qos-pod-example-burstable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: qos-demo-pod-burstable
  namespace: qos-example
spec:
  containers:
  - name: qos-demo-container001
    image: nginx
    resources:
      #qos example for burstable which means request < limit
      limits:
        memory: "500Mi"
        cpu: "700m"
      requests:
        memory: "500Mi"
        cpu: "0.5"
