task5-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task5-pod-with-pvc
  namespace: storage-ns
spec:
  volumes:
  - name: task5-pod-pvc-volume001
    persistentVolumeClaim:
      claimName: task5-pvc-volume001
  containers:
    - name: task5-pod-with-pvc
      image: nginx
      resources:
        limits:
          memory: 150Mi
          cpu: "0.5"
        requests:
          memory: 100Mi
          cpu: "0.25m"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task5-pod-pvc-volume001
