task6-projectvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task6-pod-projected-volume001
  namespace: storage-ns
spec:
  containers:
  - name: container-in-projected-volume
    image: busybox
    resources:
      limits:
        memory: 100Mi
        cpu: "0.5m"
      requests:
        memory: 80Mi
        cpu: "0.5m"
    args:
    - sleep
    - "500"
    volumeMounts:
    - name: allinone
      mountPath: "/projected-volume"
      readOnly: true
  volumes: 
  - name: allinone
    projected:
      sources:
      - secret:
          name: user
      - secret:
          name: pass
