task7-pod-managelimits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task7-pod-resourcemanagement
  namespace: storage-ns

spec:
  containers:
  # both Limit & requested mentioned for container
  - name: container1-with-both-limit-request
    image: nginx
    resources:
      limits:
        memory: "40Mi"
        cpu: "0.35m"

      requests:
        memory: "30Mi"
        cpu: "0.3m"
  # both Limit & requested mentioned above the default limit for NameSpace
  - name: container2-with-just-limits
    image: nginx
    resources:
      limits: 
        memory: "80Mi"
        cpu: "1m"
   #No limits mentioned inherits from  NameSpace limts
  - name: container3-with-nolimit-norequest
    image: nginx
