task8-Container-hooks-poststart-prestop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-lifecycle-containerhooks
spec:
  terminationGracePeriodSeconds: 3600      
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      lifecycle:
        postStart:
          exec:
            command: ["/bin/sh", "-c", "echo containerHooks > /poststarttest.txt"]
        preStop:
          exec:
            command: ["/bin/sh", "-c", "sleep 600"]
