task8-virtualnode-Container-hooks-poststart-prestop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-lifecycle-containerhooks
spec:
  terminationGracePeriodSeconds: 3600      
  nodeSelector:
    type: virtual-kubelet
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      lifecycle:
        postStart:
          exec:
            command: ["/bin/sh", "-c", "echo containerHooks > /poststarttest.txt"]
        preStop:
          exec:
            command: ["/bin/sh","-c","while [ -f /poststarttest.txt ]; do sleep 30; done"]
  nodeSelector:
    kubernetes.io/role: agent
    beta.kubernetes.io/os: linux
    type: virtual-kubelet
  tolerations:
  - key: virtual-kubelet.io/provider
    operator: Equal
    value: azure
    effect: NoSchedule
