task9-pod-with-multiple-volume.yaml


apiVersion: v1
kind: Pod
metadata:
  name: singlepod-multiple-volumes
spec:
  volumes:
    - name: vol001
      persistentVolumeClaim:
        claimName: task9-pvc-volume001
    - name: vol002
      persistentVolumeClaim:
        claimName: task9-pvc-volume002
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: /app1/volume001
          name: vol001
        - mountPath: /app2/volume002
          name: vol002
