sample-ingress-app-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  containers:
  - image: "mcr.microsoft.com/dotnet/core/samples:aspnetapp"
    name: aspnetapp-image
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    kubernetes.io/ingress.class: dev
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: aspnetapp
            servicePort: 80
        - path: /dev-ingress/*
          backend:
            serviceName: sample1-service
            servicePort: 80
        - path: /dev-ingress-2ndapp/*
          backend:
            serviceName: sample2-service
            servicePort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: sample1
  labels:
    app: sample1
spec:
  containers:
  - image: httpd
    name: sample1-image
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: sample2
  labels:
    app: sample2
spec:
  containers:
  - image: nginx
    name: sample2-image
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sample1-service
spec:
  selector:
    app: sample1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample2-service
spec:
  selector:
    app: sample2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
